--- a/Lab8_2/app/src/main/res/values/colors.xml
+++ b/Lab8_2/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="grey_300">#E0E0E0</color>
+    <color name="purple_500">#6200EE</color>
 </resources>
