--- a/Lab8_4/app/src/main/res/layout/activity_login.xml
+++ b/Lab8_4/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,16 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="16dp"
-    android:background="#F5F5F5">
+    android:background="@drawable/background_login">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Xin mời đăng nhập"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#6200EE"
+        android:layout_marginBottom="16dp" />
 
     <EditText
         android:id="@+id/etUsername"
