--- a/Lab8_5/app/src/main/res/values/colors.xml
+++ b/Lab8_5/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#4CAF50</color>
+    <color name="secondary_text">#757575</color>
+    <color name="background_color">#F9F9F9</color>
+    <color name="button_color">#2196F3</color>
+    <color name="white">#FFFFFF</color>
 </resources>
